Added firebase Completed Login UI NOTE:- Add your firebase to work as required

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,3 +43,7 @@ flutter:
         - asset: assets/font/Roboto-Medium.ttf
         - asset: assets/font/Roboto-Bold.ttf
         - asset: assets/font/Roboto-Black.ttf
+flutter_assets:
+  assets_path: assets/image
+  output_path: lib/utils/
+  filename: images.dart
