--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^2.0.16
   awesome_snackbar_content: ^0.1.0
   pinput: ^2.2.23
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
