--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   awesome_snackbar_content: ^0.1.0
   pinput: ^2.2.23
   url_strategy: ^0.2.0
+  firebase_app_check: ^0.1.1+13
 
 dev_dependencies:
   flutter_lints: ^2.0.0
