--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   pinput: ^2.2.23
   url_strategy: ^0.2.0
   firebase_app_check: ^0.1.1+13
+  cloud_firestore: ^4.4.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
