--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.6 <=3.0.0'
 
 dependencies:
   animation_wrappers: ^3.0.0
@@ -19,11 +19,11 @@ dependencies:
     sdk: flutter
   geolocator: ^9.0.2
   get: ^4.6.5
-  go_router: ^6.0.1
+  go_router: ^7.0.1
   image_picker: ^0.8.6
-  intl: ^0.17.0
+  intl: ^0.18.1
   path_provider: ^2.0.11
-  rive: ^0.10.1
+  rive: ^0.9.1
   shared_preferences: ^2.0.16
   awesome_snackbar_content: ^0.1.0
   pinput: ^2.2.23
